doc/examples/InvalidTests/TestUnary1.agl
x : Integer = 5;
y : Boolean = not x; # Error: The 'not' operator requires a boolean operand!
